--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "orientation": "any",
   "scope": "/",
   "short_name": "andreifarafonow.github",
-  "start_url": "/PlatformTesting",
+  "start_url": "/",
   "theme_color": "#ffffff",
   "icons": [
     {
